--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jadwal Sholat Real-time dengan Notifikasi</title>
     <link rel="stylesheet" href="dist/output.css">
+    <link href="https://fonts.googleapis.com/css2?family=Sawarabi+Gothic&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Zalando+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 </head>
 <body class="bg-gradient-to-br from-islamic-50 to-blue-100 min-h-screen">
     <!-- Toast Container -->
@@ -32,7 +34,7 @@
             
             <!-- Real-time Digital Clock -->
             <div class="bg-white rounded-xl shadow-lg p-6 mb-4 border border-islamic-100">
-                <div class="text-5xl font-mono font-bold text-islamic-700 mb-2" id="digitalClock">00:00:00</div>
+                <div class="text-5xl font-sans font-bold text-islamic-700 mb-2" id="digitalClock">00:00:00</div>
                 <div class="text-lg text-gray-600" id="currentDate"></div>
                 <div class="text-sm text-islamic-600 mt-2 flex items-center justify-center">
                     <span class="inline-block w-2 h-2 bg-green-500 rounded-full animate-pulse mr-2"></span>
@@ -79,20 +81,64 @@
         <div class="bg-white rounded-xl shadow-lg p-6 mb-8">
             <h3 class="text-xl font-bold text-gray-800 mb-4">Pilih Lokasi</h3>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                <select id="citySelect" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-islamic-500 focus:border-transparent cursor-pointer">
-                    <option value="1107">Kota Tangerang</option>
-                    <option value="1301">Jakarta</option>
-                    <option value="1273">Surabaya</option>
-                    <option value="1204">Bandung</option>
-                    <option value="1214">Medan</option>
-                    <option value="1226">Semarang</option>
-                    <option value="1271">Makassar</option>
-                    <option value="1219">Palembang</option>
-                    <option value="1205">Yogyakarta</option>
-                    <option value="1275">Denpasar</option>
-                    <option value="1265">Balikpapan</option>
-                </select>
-                <button onclick="updateLocation()" class="bg-islamic-600 hover:bg-islamic-700 text-white font-semibold py-3 px-6 rounded-lg transition-colors duration-300">
+                <div class="relative w-full">
+
+                    <!-- Dropdown Kota dengan AlpineJS -->
+                    <div x-data="{
+                         open: false,
+                         selectedId: '1107',
+                         selectedName: 'Kota Tangerang',
+                         cities: [
+                            { id: '1107', name: 'Kota Tangerang' },
+                            { id: '1301', name: 'Jakarta' },
+                            { id: '1273', name: 'Surabaya' },
+                            { id: '1204', name: 'Bandung' },
+                            { id: '1214', name: 'Medan' },
+                            { id: '1226', name: 'Semarang' },
+                            { id: '1271', name: 'Makassar' },
+                            { id: '1219', name: 'Palembang' },
+                            { id: '1205', name: 'Yogyakarta' },
+                            { id: '1275', name: 'Denpasar' },
+                            { id: '1265', name: 'Balikpapan' }
+                        ]
+                        }" class="relative w-full">
+
+                        <!-- Hidden input untuk submit ke form -->
+                        <input type="hidden"  id="citySelect" name="city_id" :value="selectedId">
+
+                        <!-- Tombol dropdown -->
+                        <button 
+                            type="button"
+                            @click="open = !open" 
+                            class="w-full flex justify-between items-center cursor-pointer px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-islamic-500 focus:outline-none bg-white"
+                        >
+                        <span x-text="selectedName"></span>
+                        <svg class="h-5 w-5 text-gray-400 transform transition-transform duration-200" 
+                            :class="open ? 'rotate-180' : ''" 
+                            xmlns="http://www.w3.org/2000/svg" fill="none" 
+                            viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+                        </svg>
+                        </button>
+
+                    <!-- List dropdown -->
+                    <ul 
+                        x-show="open" 
+                        @click.away="open = false" 
+                        class="absolute mt-1 w-full bg-white border border-gray-200 rounded-lg shadow-lg z-10 max-h-60 overflow-y-auto"
+                        x-transition
+                    >
+                        <template x-for="city in cities" :key="city.id">
+                        <li 
+                            @click="selectedId = city.id; selectedName = city.name; open = false" 
+                            class="px-4 py-2 cursor-pointer hover:bg-gray-100"
+                            x-text="city.name"
+                        ></li>
+                        </template>
+                    </ul>
+                    </div>
+                </div>
+                <button onclick="updateLocation()" class="cursor-pointer bg-islamic-600 hover:bg-islamic-700 text-white font-semibold py-3 px-6 rounded-lg transition-colors duration-300">
                     Update Lokasi
                 </button>
             </div>
@@ -665,5 +711,7 @@
         // Start the application
         init();
     </script>
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'97fdc08c46888beb',t:'MTc1Nzk5ODMyMi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
